--- a/studio/package.json
+++ b/studio/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^16.8.6",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
-    "sanity-plugin-url-metadata-input": "^1.0.0"
+    "sanity-plugin-url-metadata-input": "1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
