--- a/studio/package.json
+++ b/studio/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-moveable": "^0.15.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-url-metadata-input": "1.0.0"
