--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "dev": "lerna run dev --parallel",
     "format": "lerna run format",
     "build-studio": "(cd studio && npm run build)",
-    "build-web": "lerna bootstrap --ci && (cd studio && SANITY_AUTH_TOKEN=$SANITY_DEPLOY_STUDIO_TOKEN npm run graphql-deploy) && (cd web && npm run build)",
+    "build-web": "lerna bootstrap && (cd studio && SANITY_AUTH_TOKEN=$SANITY_DEPLOY_STUDIO_TOKEN npm run graphql-deploy) && (cd web && npm run build)",
     "graphql-deploy": "lerna run graphql-deploy",
     "lint": "lerna run lint",
     "postinstall": "lerna bootstrap",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "lerna": "^3.13.1"
+    "lerna": "^3.19.0"
   }
 }
