--- a/studio/package.json
+++ b/studio/package.json
@@ -27,6 +27,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-moveable": "^0.15.0",
+    "resize-observer": "^1.0.0",
+    "sanity-plugin-asset-source-unsplash": "^0.1.3",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.8",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-url-metadata-input": "1.0.0"
