--- a/studio/package.json
+++ b/studio/package.json
@@ -13,15 +13,17 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^0.146.3",
-    "@sanity/cli": "^0.146.0",
-    "@sanity/components": "^0.146.3",
-    "@sanity/core": "^0.146.0",
-    "@sanity/dashboard": "^0.146.3",
-    "@sanity/default-layout": "^0.146.3",
-    "@sanity/default-login": "^0.146.0",
-    "@sanity/desk-tool": "^0.146.3",
+    "@sanity/base": "^0.147.0",
+    "@sanity/cli": "^0.147.0",
+    "@sanity/components": "^0.147.0",
+    "@sanity/core": "^0.147.0",
+    "@sanity/dashboard": "^0.147.0",
+    "@sanity/default-layout": "^0.147.0",
+    "@sanity/default-login": "^0.147.0",
+    "@sanity/desk-tool": "^0.147.1",
     "@sanity/image-url": "^0.140.15",
+    "@sanity/vision": "^0.147.0",
+    "braille": "^1.1.0",
     "date-fns": "^1.30.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
