--- a/studio/package.json
+++ b/studio/package.json
@@ -13,16 +13,17 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "1.150.8-review-changes.382",
-    "@sanity/cli": "1.150.8-review-changes.382",
-    "@sanity/components": "1.150.8-review-changes.382",
-    "@sanity/core": "1.150.8-review-changes.382",
-    "@sanity/dashboard": "1.150.8-review-changes.382",
-    "@sanity/default-layout": "1.150.8-review-changes.382",
-    "@sanity/default-login": "1.150.8-review-changes.382",
-    "@sanity/desk-tool": "1.150.8-review-changes.382",
+    "@sanity/base": "1.150.8-review-changes.463",
+    "@sanity/cli": "1.150.8-review-changes.463",
+    "@sanity/color-input": "^1.150.1",
+    "@sanity/components": "1.150.8-review-changes.463",
+    "@sanity/core": "1.150.8-review-changes.463",
+    "@sanity/dashboard": "1.150.8-review-changes.463",
+    "@sanity/default-layout": "1.150.8-review-changes.463",
+    "@sanity/default-login": "1.150.8-review-changes.463",
+    "@sanity/desk-tool": "1.150.8-review-changes.463",
     "@sanity/image-url": "^0.140.19",
-    "@sanity/vision": "1.150.8-review-changes.382",
+    "@sanity/vision": "1.150.8-review-changes.463",
     "braille": "^1.1.0",
     "date-fns": "^1.30.1",
     "prop-types": "^15.7.2",
